--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,8 +1,34 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Pinyon+Script|Roboto+Slab:100,300,400,700&display=swap');
 @import "mixins.scss";
 
 body {
     @include column-display;
     box-sizing: border-box;
     background-color: white;
-    width: 100%;    
+    margin: 0;
+    padding: 0;
+    width: 100%; 
+    font-family: 'Montserrat', sans-serif;
+    
+    .jumbotron {        
+        position: relative;
+        background: url('../images/Background_Image.png');
+        min-height: 1000px;
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
+
+
+    .col-1 { width: 8.33%; }      
+    .col-2 { width: 16.66%; }      
+    .col-3 { width: 25%; }      
+    .col-4 { width: 33.33%; }      
+    .col-5 { width: 41.66%; }      
+    .col-6 { width: 50%; }      
+    .col-7 { width: 58.33%; }      
+    .col-8 { width: 66.66%; }      
+    .col-9 { width: 75%; }      
+    .col-10 { width: 83.33%; }      
+    .col-11 { width: 91.66%; }      
+    .col-12 { width: 100%; }
 }
