--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,26 @@ body .jumbotron {
   background-size: 100%;
 }
 
+body .services {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 120px 0;
+}
+
+body .portfolio {
+  display: flex;
+  flex-direction: column;
+  background-color: #f7f7f7;
+  padding: 120px 0;
+}
+
+body .about {
+  display: flex;
+  flex-direction: column;
+  padding: 120px 0;
+}
+
 body .col-1 {
   width: 8.33%;
 }
@@ -157,42 +177,37 @@ body .col-12 {
   background: rgba(254, 209, 54, 0.5);
 }
 
-.services {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.services .services-h1 {
+.services-h1 {
   color: #222222;
   font-size: 40px;
   font-weight: 700;
   line-height: 75px;
-  margin-top: 120px;
+  text-align: center;
 }
 
-.services .services-h2 {
+.services-h2 {
   color: #777777;
-  font-family: 'Merriweather', serif;
-  font-weight: 700;
   font-size: 16px;
   font-style: italic;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  margin-bottom: 26px;
 }
 
-.services .services-row {
+.services-row {
   display: flex;
   flex-direction: row;
-  margin: 120px 0;
+  margin-top: 120px;
   align-self: center;
   justify-content: space-around;
 }
 
-.services .services-row .services-col {
+.services-row .services-col {
   display: flex;
   flex-direction: column;
 }
 
-.services .services-row .services-col .services-pic {
+.services-row .services-col .services-pic {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -203,7 +218,13 @@ body .col-12 {
   align-self: center;
 }
 
-.services .services-row .services-col .title {
+.services-row .services-col .services-pic:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  border-color: #fcc400;
+}
+
+.services-row .services-col .title {
   color: #222222;
   font-size: 18px;
   font-weight: 700;
@@ -211,21 +232,18 @@ body .col-12 {
   margin: 0;
 }
 
-.services .services-row .services-col .services-desc {
+.services-row .services-col .title:hover {
+  cursor: pointer;
+}
+
+.services-row .services-col .services-desc {
   color: #777777;
   font-size: 14px;
   font-weight: 400;
   font-family: 'Roboto Slab', serif;
 }
 
-.portfolio {
-  display: flex;
-  flex-direction: column;
-  background-color: #f7f7f7;
-  padding: 120px 0;
-}
-
-.portfolio .portfolio-h1 {
+.portfolio-h1 {
   color: #222222;
   font-size: 40px;
   font-weight: 700;
@@ -233,7 +251,7 @@ body .col-12 {
   text-align: center;
 }
 
-.portfolio .portfolio-h2 {
+.portfolio-h2 {
   color: #777777;
   font-size: 16px;
   font-style: italic;
@@ -242,7 +260,7 @@ body .col-12 {
   margin-bottom: 26px;
 }
 
-.portfolio .portfolio-row {
+.portfolio-row {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -250,25 +268,25 @@ body .col-12 {
   margin-top: 50px;
 }
 
-.portfolio .portfolio-row .portfolio-col {
+.portfolio-row .portfolio-col {
   display: flex;
   flex-direction: column;
   background-color: white;
   transition: background-color 0.5s ease;
 }
 
-.portfolio .portfolio-row .portfolio-col:hover {
+.portfolio-row .portfolio-col:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   background: rgba(0, 0, 0, 0.1);
 }
 
-.portfolio .portfolio-row .portfolio-col img {
+.portfolio-row .portfolio-col img {
   width: 291px;
   height: 300px;
 }
 
-.portfolio .portfolio-row .portfolio-col .portfolio-title {
+.portfolio-row .portfolio-col .portfolio-title {
   color: #333333;
   font-size: 18px;
   font-weight: 700;
@@ -276,13 +294,135 @@ body .col-12 {
   margin-top: 29px;
 }
 
-.portfolio .portfolio-row .portfolio-col .portfolio-subtitle {
+.portfolio-row .portfolio-col .portfolio-subtitle {
   color: #737373;
   font-size: 14px;
   font-style: italic;
   font-family: 'Merriweather', serif;
   text-align: center;
   margin-bottom: 29px;
+}
+
+.about-h1 {
+  color: #222222;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 75px;
+  text-align: center;
+}
+
+.about-h2 {
+  color: #777777;
+  font-size: 16px;
+  font-style: italic;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  margin-bottom: 26px;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 84px;
+  min-height: 500px;
+}
+
+.about-container .about-row {
+  position: relative;
+  height: 184px;
+}
+
+.about-container .about-row .about-desc {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 33.33%;
+  height: 184px;
+}
+
+.about-container .about-row .about-desc .desc-h1 {
+  color: #222222;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 17px;
+}
+
+.about-container .about-row .about-desc .desc-text {
+  color: #777777;
+  font-family: 'Roboto Slab', serif;
+  font-size: 14px;
+  font-weight: 400;
+  max-width: 50%;
+  overflow: auto;
+}
+
+.about-container .about-row .about-desc .end {
+  align-self: flex-end;
+}
+
+.about-container .about-row .left {
+  transform: translateX(-170px);
+  right: 50%;
+  text-align: right;
+}
+
+.about-container .about-row .right {
+  transform: translateX(170px);
+  left: 50%;
+  text-align: left;
+}
+
+.about-container .about-row .about-img {
+  position: absolute;
+  top: 0;
+  transform: translateX(50%);
+  right: 50%;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  border: 7px solid #f1f1f1;
+}
+
+.about-container .about-row-con {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 93px;
+}
+
+.about-container .about-row-con .connector {
+  width: 1px;
+  height: 93px;
+  border: 1px solid #f1f1f1;
+  background-color: #f1f1f1;
+}
+
+.about-container .last {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.about-container .last .story {
+  display: flex;
+  flex-direction: column;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  border: 7px solid #f1f1f1;
+  background-color: #fed136;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-container .last .story p {
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 5px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
