--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -6,3 +6,18 @@
     display: flex;
     flex-direction: row;
 }
+@mixin section-h1 {
+    color: #222222;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 75px;
+    text-align: center;  
+}
+@mixin section-h2 {
+    color: #777777;
+    font-size: 16px;
+    font-style: italic;
+    font-family: 'Merriweather', serif;
+    text-align: center;
+    margin-bottom: 26px;
+}
