--- a/sass/sections/portfolio.scss
+++ b/sass/sections/portfolio.scss
@@ -1,25 +1,10 @@
 @import "../mixins.scss";
 
-.portfolio {
-    @include column-display;
-
-    background-color: #f7f7f7;
-    padding: 120px 0;    
-
     .portfolio-h1 {
-        color: #222222;
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 75px;
-        text-align: center;        
+        @include section-h1;        
     }
     .portfolio-h2 {
-        color: #777777;
-        font-size: 16px;
-        font-style: italic;
-        font-family: 'Merriweather', serif;
-        text-align: center;
-        margin-bottom: 26px;
+        @include section-h2;
     }
     .portfolio-row {
         @include row-display;
@@ -59,4 +44,3 @@
             }
         }
     }    
-}
