--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,4 +3,5 @@
 @import "sections/jumbotron.scss";
 @import "sections/services.scss";
 @import "sections/portfolio.scss";
+@import "sections/about_us.scss";
 
