--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,5 @@
 @import "sections/services.scss";
 @import "sections/portfolio.scss";
 @import "sections/about_us.scss";
+@import "sections/team.scss";
 
