--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,4 +5,5 @@
 @import "sections/portfolio.scss";
 @import "sections/about_us.scss";
 @import "sections/team.scss";
+@import "sections/sponsors.scss";
 
