--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ body .team {
   text-align: center;
 }
 
+body .sponsors {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 61px 0;
+}
+
 body .col-1 {
   width: 8.33%;
 }
@@ -510,6 +517,16 @@ body .col-12 {
   font-size: 16px;
   font-weight: 400;
   font-family: 'Roboto Slab', serif;
+}
+
+.sponsors-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.sponsors-row img {
+  margin: 0 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
