--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,4 +6,5 @@
 @import "sections/about_us.scss";
 @import "sections/team.scss";
 @import "sections/sponsors.scss";
+@import "sections/contact.scss";
 
