--- a/css/sections/sponsors.css
+++ b/css/sections/sponsors.css
@@ -1,11 +1,3 @@
-.sponsors-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+.sponsors-row { display: flex; flex-direction: row; justify-content: center; }
 
-.sponsors-row img {
-  margin: 0 20px;
-}
-
-/*# sourceMappingURL=sponsors.css.map */
+.sponsors-row img { margin: 0 20px; }
