--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -38,6 +38,12 @@ body {
         justify-content: center;
         padding: 61px 0;
     }
+    .contact {
+        @include column-display;
+        padding: 110px 0;        
+        background: url('../images/contact-section.png');
+        background-size: cover;
+    }
 
     .col-1 { width: 8.33%; }      
     .col-2 { width: 16.66%; }      
