--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,4 +7,5 @@
 @import "sections/team.scss";
 @import "sections/sponsors.scss";
 @import "sections/contact.scss";
+@import "sections/footer.scss";
 
