--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,20 @@ body .contact {
   background-size: cover;
 }
 
+body .footer {
+  height: 100px;
+  position: relative;
+}
+
+@media (max-width: 974px) {
+  body .footer {
+    display: flex;
+    flex-direction: column-reverse;
+    height: auto;
+    padding-top: 20px;
+  }
+}
+
 body .col-1 {
   width: 8.33%;
 }
@@ -520,11 +534,22 @@ body .col-12 {
   margin: 0 5px;
 }
 
+@media (max-width: 974px) {
+  .team-row {
+    display: flex;
+    flex-direction: column;
+  }
+  .team-row .team-column {
+    align-self: center;
+  }
+}
+
 .team-desc {
   color: #777777;
   font-size: 16px;
   font-weight: 400;
   font-family: 'Roboto Slab', serif;
+  padding: 0 30px;
 }
 
 .sponsors-row {
@@ -535,6 +560,19 @@ body .col-12 {
 
 .sponsors-row img {
   margin: 0 20px;
+}
+
+@media (max-width: 974px) {
+  .sponsors-row {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+  .sponsors-row img {
+    max-width: 200px;
+    align-self: center;
+    margin: 20px 0;
+  }
 }
 
 .contact-h1 {
@@ -582,6 +620,32 @@ body .col-12 {
   border-radius: 3px;
 }
 
+@media (max-width: 974px) {
+  .contact-row {
+    display: flex;
+    flex-direction: column;
+  }
+  .contact-row .contact-inputs {
+    align-self: center;
+    margin-right: 0;
+  }
+  .contact-row .contact-textfield {
+    align-self: center;
+    margin-bottom: 29px;
+  }
+}
+
+@media (max-width: 483px) {
+  .contact-row input {
+    width: 200px;
+    height: 25px;
+  }
+  .contact-row textarea {
+    width: 200px;
+    height: 108px;
+  }
+}
+
 .contact-button {
   display: flex;
   flex-direction: row;
@@ -602,6 +666,64 @@ body .col-12 {
   cursor: pointer;
   box-shadow: 0 0 10px rgba(254, 209, 54, 0.9);
   background: rgba(254, 209, 54, 0.7);
+}
+
+@media (max-width: 483px) {
+  .contact-button {
+    height: 33px;
+    padding: 0 10px;
+    font-size: 8px;
+  }
+}
+
+.footer-left {
+  color: #555555;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  position: absolute;
+  transform: translateY(-50%) translateX(-160px);
+  top: 50%;
+  right: 50%;
+}
+
+.footer-social {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  transform: translateY(-50%) translateX(-50%);
+  top: 50%;
+  left: 50%;
+}
+
+.footer-social .social {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  background-color: #222222;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.footer-social .social:last-child {
+  margin: 0;
+}
+
+@media (max-width: 974px) {
+  .footer-left {
+    position: unset;
+    align-self: center;
+    transform: none;
+    margin: 20px 0;
+  }
+  .footer-social {
+    position: unset;
+    align-self: center;
+    transform: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
