--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -1,51 +1,10 @@
-.footer-left {
-  color: #555555;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  position: absolute;
-  transform: translateY(-50%) translateX(-160px);
-  top: 50%;
-  right: 50%;
-}
+.footer-left { color: #555555; font-size: 14px; font-weight: 400; line-height: 22px; position: absolute; transform: translateY(-50%) translateX(-160px); top: 50%; right: 50%; }
 
-.footer-social {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  transform: translateY(-50%) translateX(-50%);
-  top: 50%;
-  left: 50%;
-}
+.footer-social { display: flex; flex-direction: row; position: absolute; transform: translateY(-50%) translateX(-50%); top: 50%; left: 50%; }
 
-.footer-social .social {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  background-color: #222222;
-  border-radius: 50%;
-  margin-right: 10px;
-}
+.footer-social .social { display: flex; flex-direction: row; justify-content: center; align-items: center; height: 40px; width: 40px; background-color: #222222; border-radius: 50%; margin-right: 10px; }
 
-.footer-social .social:last-child {
-  margin: 0;
-}
+.footer-social .social:last-child { margin: 0; }
 
-@media (max-width: 974px) {
-  .footer-left {
-    position: unset;
-    align-self: center;
-    transform: none;
-    margin: 20px 0;
-  }
-  .footer-social {
-    position: unset;
-    align-self: center;
-    transform: none;
-  }
-}
-
-/*# sourceMappingURL=footer.css.map */
+@media (max-width: 974px) { .footer-left { position: unset; align-self: center; transform: none; margin: 20px 0; }
+  .footer-social { position: unset; align-self: center; transform: none; } }
