--- a/css/sections/sponsors.css
+++ b/css/sections/sponsors.css
@@ -1,24 +1,6 @@
-.sponsors-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+.sponsors-row { display: flex; flex-direction: row; justify-content: center; }
 
-.sponsors-row img {
-  margin: 0 20px;
-}
+.sponsors-row img { margin: 0 20px; }
 
-@media (max-width: 974px) {
-  .sponsors-row {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-  }
-  .sponsors-row img {
-    max-width: 200px;
-    align-self: center;
-    margin: 20px 0;
-  }
-}
-
-/*# sourceMappingURL=sponsors.css.map */
+@media (max-width: 974px) { .sponsors-row { display: flex; flex-direction: column; align-self: center; }
+  .sponsors-row img { max-width: 200px; align-self: center; margin: 20px 0; } }
